--- a/src/page/Movies/style.scss
+++ b/src/page/Movies/style.scss
@@ -13,6 +13,8 @@
     width: 250px;
     height: 350px;
     margin: 20px 0px;
+    cursor: pointer;
+
     & img {
       width: 100%;
       height: 100%;
