--- a/front/src/layout/MenuBar/style.scss
+++ b/front/src/layout/MenuBar/style.scss
@@ -56,9 +56,14 @@
     height: 30px;
     margin: 0px 10px;
   }
-  & > img {
+  & > div {
     width: 30px;
     height: 30px;
     margin: 0px 10px;
+    cursor: pointer;
+    img {
+      width: 100%;
+      height: 100%;
+    }
   }
 }
