--- a/src/page/SignUp/style.scss
+++ b/src/page/SignUp/style.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url('../../img/background1.jpg');
+  background-image: url('../../img/backgroundImg.jpg');
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -13,7 +13,7 @@
 .signUpContainer {
   width: 500px;
   height: 600px;
-  background-color: #141414bd;
+  background-color: #141414cc;
   padding: 0px 70px;
   display: flex;
   flex-direction: column;
@@ -57,6 +57,36 @@
     color: #666666;
     font-size: 14px;
     bottom: -20px;
+    left: 10px;
+  }
+
+  & span.inputOnFocus {
+    animation: inputOnFocus 0.6s forwards;
+  }
+  & span.inputOffFocus {
+    animation: inputOffFocus 0.6s forwards;
+  }
+
+  @keyframes inputOnFocus {
+    from {
+      bottom: -20px;
+      left: 10px;
+    }
+    to {
+      bottom: 0px;
+      left: 0px;
+    }
+  }
+
+  @keyframes inputOffFocus {
+    from {
+      bottom: 0px;
+      left: 0px;
+    }
+    to {
+      bottom: -20px;
+      left: 10px;
+    }
   }
 
   & input:focus {
@@ -67,6 +97,11 @@
     display: flex;
     flex-direction: column;
     margin: 30px 0px;
+    & p {
+      padding-top: 5px;
+      font-size: 12px;
+      color: #ff3636;
+    }
   }
   & button {
     width: 100%;
