--- a/src/page/SignIn/style.scss
+++ b/src/page/SignIn/style.scss
@@ -1,16 +1,16 @@
-.signUp {
+.signIn {
   width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url('../../img/signUp_background.jpg');
+  background-image: url('../../img/signIn_background.jpg');
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-.signUpContainer {
+.signInContainer {
   width: 500px;
   height: 600px;
   background-color: #141414cc;
