--- a/src/page/SignUp/style.scss
+++ b/src/page/SignUp/style.scss
@@ -8,121 +8,135 @@
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-}
 
-.signUpContainer {
-  width: 500px;
-  height: 600px;
-  background-color: #141414cc;
-  padding: 0px 70px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  p {
-    margin: 0px;
-  }
-}
-
-.logo {
-  text-align: center;
-  img {
-    width: 250px;
-    height: 70px;
-  }
-}
-.infoContainer {
-  color: #e5e5e5;
-
-  // & label {
-  // position: relative;
-  // }
-
-  & input {
-    width: 100%;
-    height: 30px;
-    border-width: 1px;
-    border-right-width: 0;
-    border-left-width: 0;
-    border-top-width: 0;
-    border-color: #666666;
-    outline: none;
-    background-color: rgba(0, 0, 0, 0);
-    padding: 0;
-    margin: 0;
-    color: #f6f6f6;
-  }
-  & span {
-    position: relative;
-    pointer-events: none;
-    color: #666666;
-    font-size: 14px;
-    bottom: -20px;
-    left: 10px;
-  }
-
-  & span.inputOnFocus {
-    animation: inputOnFocus 0.6s forwards;
-  }
-  & span.inputOffFocus {
-    animation: inputOffFocus 0.6s forwards;
-  }
-
-  @keyframes inputOnFocus {
-    from {
-      bottom: -20px;
-      left: 10px;
-    }
-    to {
-      bottom: 0px;
-      left: 0px;
-    }
-  }
-
-  @keyframes inputOffFocus {
-    from {
-      bottom: 0px;
-      left: 0px;
-    }
-    to {
-      bottom: -20px;
-      left: 10px;
-    }
-  }
-
-  & input:focus {
-    border-color: #f6f6f6;
-  }
-
-  & label {
+  .signUpContainer {
+    width: 500px;
+    height: 700px;
+    background-color: #141414cc;
+    padding: 0px 70px;
     display: flex;
     flex-direction: column;
-    margin: 30px 0px;
-    & p {
-      padding-top: 5px;
-      font-size: 12px;
-      color: #ff3636;
+    justify-content: center;
+    p {
+      margin: 0px;
     }
   }
-  & button {
-    width: 100%;
-    height: 40px;
-    margin-top: 10px;
-    border-radius: 4px;
-    cursor: pointer;
-    background-color: #c40a1b;
-    color: #e5e5e5;
-    font-size: 22px;
-    font-weight: 700;
-    border-style: none;
-  }
-}
 
-.suggestion {
-  color: #e5e5e5;
-  margin-top: 20px;
-  font-size: 14px;
-  & span {
-    cursor: pointer;
-    color: #000fff;
+  .signUp-title {
+    & h1 {
+      font-size: 30px;
+      margin-bottom: 10px;
+      color: #e5e5e5;
+    }
+  }
+
+  .logo {
+    text-align: center;
+    margin-bottom: 30px;
+    img {
+      width: 250px;
+      height: 70px;
+    }
+  }
+  .infoContainer {
+    color: #e5e5e5;
+
+    // & label {
+    // position: relative;
+    // }
+
+    & input {
+      width: 100%;
+      height: 30px;
+      border-width: 1px;
+      border-right-width: 0;
+      border-left-width: 0;
+      border-top-width: 0;
+      border-color: #666666;
+      outline: none;
+      background-color: rgba(0, 0, 0, 0);
+      padding: 0;
+      margin: 0;
+      color: #f6f6f6;
+    }
+    & span {
+      position: relative;
+      pointer-events: none;
+      color: #666666;
+      font-size: 14px;
+      bottom: -20px;
+      left: 10px;
+    }
+
+    & span.inputOnFocus {
+      animation: inputOnFocus 0.6s forwards;
+    }
+    & span.inputOffFocus {
+      animation: inputOffFocus 0.6s forwards;
+    }
+
+    @keyframes inputOnFocus {
+      from {
+        bottom: -20px;
+        left: 10px;
+      }
+      to {
+        bottom: 0px;
+        left: 0px;
+      }
+    }
+
+    @keyframes inputOffFocus {
+      from {
+        bottom: 0px;
+        left: 0px;
+      }
+      to {
+        bottom: -20px;
+        left: 10px;
+      }
+    }
+
+    & input:focus {
+      border-color: #f6f6f6;
+    }
+
+    & label {
+      display: flex;
+      flex-direction: column;
+      margin: 20px 0px;
+      & p {
+        opacity: 0;
+        padding-top: 5px;
+        font-size: 12px;
+        color: #ff3636;
+      }
+      & p.errorMessage {
+        opacity: 1;
+      }
+    }
+    & button {
+      width: 100%;
+      height: 40px;
+      margin-top: 10px;
+      border-radius: 4px;
+      cursor: pointer;
+      background-color: #c40a1b;
+      color: #e5e5e5;
+      font-size: 22px;
+      font-weight: 700;
+      border-style: none;
+    }
+  }
+
+  .suggestion {
+    color: #e5e5e5;
+    margin-top: 20px;
+    font-size: 14px;
+    & span {
+      cursor: pointer;
+      color: #000fff;
+      margin-left: 12px;
+    }
   }
 }
