--- a/src/page/SignUp/style.scss
+++ b/src/page/SignUp/style.scss
@@ -11,7 +11,7 @@
 
   .signUpContainer {
     width: 500px;
-    height: 700px;
+    height: 650px;
     background-color: #141414cc;
     padding: 0px 70px;
     display: flex;
@@ -19,6 +19,42 @@
     justify-content: center;
     p {
       margin: 0px;
+    }
+  }
+
+  .SignUpSuccessPageContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    // background-color: blue;
+    img {
+      width: 60px;
+    }
+
+    & h1 {
+      margin-top: 30px;
+      span {
+        color: #c40a1b;
+      }
+      color: #e5e5e5;
+    }
+    & p {
+      font-size: 14px;
+      margin-top: 20px;
+      color: #e5e5e5;
+    }
+    & button {
+      width: 100%;
+      height: 40px;
+      margin-top: 70px;
+      border-radius: 4px;
+      cursor: pointer;
+      background-color: #c40a1b;
+      color: #e5e5e5;
+      font-size: 22px;
+      font-weight: 700;
+      border-style: none;
     }
   }
 
