--- a/src/components/LogInModal/style.scss
+++ b/src/components/LogInModal/style.scss
@@ -12,7 +12,7 @@
   background-color: none;
 
   .logInContainer {
-    background-color: #00000096;
+    background-color: #000000bb;
     width: 280px;
     height: 180px;
     display: flex;
@@ -26,6 +26,7 @@
       height: 30px;
       outline: none;
       margin-bottom: 5px;
+      color: #3e3e3e;
     }
 
     & button {
