--- a/src/page/SignUp/style.scss
+++ b/src/page/SignUp/style.scss
@@ -27,6 +27,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
     // background-color: blue;
     img {
       width: 60px;
@@ -44,17 +45,37 @@
       margin-top: 20px;
       color: #e5e5e5;
     }
-    & button {
+
+    & div {
       width: 100%;
-      height: 40px;
-      margin-top: 70px;
-      border-radius: 4px;
-      cursor: pointer;
-      background-color: #c40a1b;
-      color: #e5e5e5;
-      font-size: 22px;
-      font-weight: 700;
-      border-style: none;
+      height: 150px;
+      a {
+        text-decoration: none;
+        .signInBtn {
+          width: 100%;
+          height: 40px;
+          margin-top: 70px;
+          border-radius: 4px;
+          cursor: pointer;
+          background-color: #c40a1b;
+          color: #e5e5e5;
+          font-size: 22px;
+          font-weight: 700;
+          border-style: none;
+        }
+        .homeBtn {
+          width: 100%;
+          height: 40px;
+          margin-top: 10px;
+          border-radius: 4px;
+          cursor: pointer;
+          background-color: #666666;
+          color: #e5e5e5;
+          font-size: 22px;
+          font-weight: 700;
+          border-style: none;
+        }
+      }
     }
   }
 
@@ -162,6 +183,9 @@
       font-size: 22px;
       font-weight: 700;
       border-style: none;
+    }
+    & .homeBtn {
+      background-color: #666666;
     }
   }
 
