--- a/src/components/LogInModal/style.scss
+++ b/src/components/LogInModal/style.scss
@@ -20,6 +20,13 @@
     justify-content: center;
     align-items: center;
 
+    & form {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
     & input {
       box-sizing: border-box;
       width: 250px;
