--- a/src/page/MovieDetail/style.scss
+++ b/src/page/MovieDetail/style.scss
@@ -4,5 +4,31 @@
   margin: auto;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: center;
+}
+
+.detail__wrap {
+  display: flex;
+  color: #e5e5e5;
+  & .detail__poster {
+    width: 500px;
+    margin-right: 20px;
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  & .detail__info {
+    width: 50%;
+    margin-left: 20px;
+    & h1 {
+      color: #e5e5e5;
+    }
+  }
+  & .detail__subInfo {
+    & li {
+      list-style: none;
+    }
+  }
 }
