--- a/src/page/MovieDetail/style.scss
+++ b/src/page/MovieDetail/style.scss
@@ -10,8 +10,10 @@
 .detail__wrap {
   display: flex;
   color: #e5e5e5;
+  background-color: red;
   & .detail__poster {
-    width: 500px;
+    width: 250px;
+    height: 100%;
     margin-right: 20px;
     img {
       width: 100%;
@@ -27,8 +29,19 @@
     }
   }
   & .detail__subInfo {
-    & li {
-      list-style: none;
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+    h3 {
+      margin: 0px;
+      margin-right: 20px;
+    }
+    & ul {
+      display: flex;
+      margin-right: 20px;
+      li {
+        list-style: none;
+      }
     }
   }
 }
