--- a/src/page/MovieDetail/style.scss
+++ b/src/page/MovieDetail/style.scss
@@ -1,16 +1,35 @@
 .movieDetail {
-  width: 1200px;
-  padding-top: 80px;
+  width: 100%;
+  padding-top: 60px;
   margin: auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
 
+.detailContainer {
+  width: 100%;
+  height: 600px;
+  position: relative;
+  padding: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  & > img {
+    z-index: -1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0.3;
+    width: 100%;
+    height: 100%;
+  }
+}
+
 .detail__wrap {
   display: flex;
   color: #e5e5e5;
-  background-color: red;
+  justify-content: center;
   & .detail__poster {
     width: 250px;
     height: 100%;
