--- a/src/page/MovieDetail/style.scss
+++ b/src/page/MovieDetail/style.scss
@@ -5,9 +5,10 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  color: #e5e5e5;
 }
 
-.detailContainer {
+.mainDetailContainer {
   width: 100%;
   height: 600px;
   position: relative;
@@ -16,19 +17,18 @@
   justify-content: center;
   align-items: center;
   & > img {
-    z-index: -1;
     position: absolute;
     top: 0;
     left: 0;
     opacity: 0.3;
     width: 100%;
     height: 100%;
+    z-index: -1;
   }
 }
 
 .detail__wrap {
   display: flex;
-  color: #e5e5e5;
   justify-content: center;
   & .detail__poster {
     width: 250px;
@@ -62,5 +62,35 @@
         list-style: none;
       }
     }
+  }
+}
+
+.detailMediaContainer {
+  display: flex;
+  flex-direction: column;
+  overflow-x: auto;
+  padding: 80px;
+
+  .selectMedia {
+    & button {
+      font-size: 24px;
+      margin: 10px 10px;
+      background-color: rgba(255, 255, 255, 0);
+      border: 0;
+      font-weight: 600;
+      color: #e5e5e5;
+      cursor: pointer;
+    }
+  }
+
+  & ul {
+    display: flex;
+    overflow-x: auto;
+    li {
+      list-style: none;
+    }
+  }
+  & img {
+    margin-right: 20px;
   }
 }
