--- a/src/page/MovieDetail/style.scss
+++ b/src/page/MovieDetail/style.scss
@@ -71,18 +71,6 @@
   overflow-x: auto;
   padding: 80px;
 
-  .selectMedia {
-    & button {
-      font-size: 24px;
-      margin: 10px 10px;
-      background-color: rgba(255, 255, 255, 0);
-      border: 0;
-      font-weight: 600;
-      color: #e5e5e5;
-      cursor: pointer;
-    }
-  }
-
   & ul {
     display: flex;
     overflow-x: auto;
@@ -92,5 +80,22 @@
   }
   & img {
     margin-right: 20px;
+  }
+}
+
+.movieCastContainer {
+  padding: 80px;
+  ul {
+    display: flex;
+    li {
+      list-style: none;
+      width: 140px;
+      height: 250px;
+      overflow-x: auto;
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
   }
 }
