--- a/src/page/MovieDetail/style.scss
+++ b/src/page/MovieDetail/style.scss
@@ -84,9 +84,13 @@
 }
 
 .movieCastContainer {
+  display: flex;
+  flex-direction: column;
+  overflow-x: auto;
   padding: 80px;
   ul {
     display: flex;
+    overflow-x: auto;
     li {
       list-style: none;
       width: 140px;
