--- a/src/components/VideoPreview/style.scss
+++ b/src/components/VideoPreview/style.scss
@@ -1,7 +1,7 @@
 .selectMedia {
   & button {
-    font-size: 24px;
-    margin: 10px 10px;
+    font-size: 18px;
+    // margin: 10px 10px;
     background-color: rgba(255, 255, 255, 0);
     border: 0;
     font-weight: 600;
