--- a/src/page/MovieDetail/style.scss
+++ b/src/page/MovieDetail/style.scss
@@ -71,6 +71,15 @@
   overflow-x: auto;
   padding: 80px;
 
+  .selectMedia {
+    display: flex;
+    align-items: flex-end;
+    margin: 10px;
+    & > h2 {
+      margin-right: 20px;
+    }
+  }
+
   & ul {
     display: flex;
     overflow-x: auto;
@@ -80,26 +89,5 @@
   }
   & img {
     margin-right: 20px;
-  }
-}
-
-.movieCastContainer {
-  display: flex;
-  flex-direction: column;
-  overflow-x: auto;
-  padding: 80px;
-  ul {
-    display: flex;
-    overflow-x: auto;
-    li {
-      list-style: none;
-      width: 140px;
-      height: 250px;
-      overflow-x: auto;
-      img {
-        width: 100%;
-        height: 100%;
-      }
-    }
   }
 }
