--- a/src/page/MoviePreview/style.scss
+++ b/src/page/MoviePreview/style.scss
@@ -1,5 +1,5 @@
 .moviePreviewContainer {
-  // background-color: red;
+  background-color: rgba(0, 0, 0, 0.7);
   position: fixed;
   width: 100%;
   height: 100%;
@@ -17,15 +17,29 @@
     width: 50%;
     height: 50%;
     display: flex;
-    padding: 20px;
-    border-radius: 10px;
+    border-radius: 20px;
     justify-content: space-between;
   }
 }
 
 .previewImg {
-  background-color: red;
+  // background-color: red;
   img {
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
     height: 100%;
+  }
+}
+.language {
+  color: #e5e5e5;
+  & > span {
+    font-size: 12px;
+    font-weight: 600;
+    border-radius: 5px;
+    text-transform: uppercase;
+    margin: 5px;
+    padding: 1px 3px;
+    border: 1px solid #666666;
+    background-color: #666666;
   }
 }
