--- a/src/page/MoviePreview/style.scss
+++ b/src/page/MoviePreview/style.scss
@@ -7,7 +7,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   .previewContent {
-    background-color: purple;
+    background-color: rgb(20, 20, 20);
     position: fixed;
     top: 0;
     bottom: 0;
@@ -22,7 +22,18 @@
   }
 }
 
-.previewImg {
+.previewRight {
+  flex-direction: column;
+  display: flex;
+}
+
+.closeBtn {
+  display: flex;
+  justify-content: end;
+  margin: 30px 0px;
+}
+
+.previewLeft {
   // background-color: red;
   img {
     border-top-left-radius: 20px;
@@ -30,9 +41,32 @@
     height: 100%;
   }
 }
-.language {
+
+.previewRight {
+  padding: 0px 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+}
+
+.overview {
   color: #e5e5e5;
+  font-size: 14px;
+}
+
+.metaData {
+  span {
+    border: 1px solid #666666;
+    background-color: #666666;
+    padding: 3px;
+    color: #e5e5e5;
+  }
+}
+
+.language {
+  color: #454545;
   & > span {
+    color: #e5e5e5;
     font-size: 12px;
     font-weight: 600;
     border-radius: 5px;
@@ -41,5 +75,35 @@
     padding: 1px 3px;
     border: 1px solid #666666;
     background-color: #666666;
+  }
+}
+
+.genres {
+  color: #454545;
+  & > span {
+    color: #e5e5e5;
+    font-size: 12px;
+    font-weight: 600;
+    border-radius: 5px;
+    text-transform: uppercase;
+    margin: 5px;
+    padding: 1px 3px;
+    border: 1px solid #666666;
+    background-color: #666666;
+  }
+}
+
+.myPageInfo {
+  display: flex;
+  .heartWrap,
+  .cartWrap {
+    cursor: pointer;
+    width: 35px;
+    height: 35px;
+    margin: 10px;
+    img {
+      width: 100%;
+      height: 100%;
+    }
   }
 }
