--- a/src/page/MoviePreview/style.scss
+++ b/src/page/MoviePreview/style.scss
@@ -31,6 +31,9 @@
   display: flex;
   justify-content: end;
   margin: 30px 0px;
+  svg {
+    cursor: pointer;
+  }
 }
 
 .previewLeft {
@@ -55,11 +58,14 @@
 }
 
 .metaData {
+  display: flex;
   span {
     border: 1px solid #666666;
     background-color: #666666;
     padding: 3px;
     color: #e5e5e5;
+  }
+  div {
   }
 }
 
