--- a/src/page/MoviePreview/style.scss
+++ b/src/page/MoviePreview/style.scss
@@ -52,61 +52,74 @@
   justify-content: start;
 }
 
+.previewInfo {
+  padding: 10px;
+}
+
 .overview {
   color: #e5e5e5;
   font-size: 14px;
+  margin: 40px 0px;
 }
 
 .metaData {
   display: flex;
+  align-items: center;
   span {
-    border: 1px solid #666666;
-    background-color: #666666;
-    padding: 3px;
+    background-color: #b66d3b;
+    border-radius: 3px;
+    padding: 5px;
     color: #e5e5e5;
+    margin-right: 20px;
+    font-weight: 700;
   }
   div {
+    svg {
+      margin: 0px 5px;
+    }
   }
 }
 
 .language {
   color: #454545;
+  font-weight: 600;
   & > span {
     color: #e5e5e5;
     font-size: 12px;
-    font-weight: 600;
+    font-weight: 700;
     border-radius: 5px;
     text-transform: uppercase;
-    margin: 5px;
-    padding: 1px 3px;
-    border: 1px solid #666666;
+    margin: 5px 5px;
+    padding: 3px 5px;
     background-color: #666666;
   }
 }
 
 .genres {
   color: #454545;
+  font-weight: 600;
   & > span {
     color: #e5e5e5;
     font-size: 12px;
-    font-weight: 600;
+    font-weight: 700;
     border-radius: 5px;
     text-transform: uppercase;
-    margin: 5px;
-    padding: 1px 3px;
-    border: 1px solid #666666;
-    background-color: #666666;
+    margin: 5px 5px;
+    padding: 3px 5px;
+    background-color: #ac8b29;
   }
 }
 
 .myPageInfo {
   display: flex;
+  justify-content: end;
   .heartWrap,
   .cartWrap {
     cursor: pointer;
     width: 35px;
     height: 35px;
-    margin: 10px;
+    margin-top: 10px;
+    margin-right: 20px;
     img {
       width: 100%;
       height: 100%;
