--- a/src/page/MoviePreview/style.scss
+++ b/src/page/MoviePreview/style.scss
@@ -75,7 +75,7 @@
   }
   div {
     svg {
-      margin: 0px 5px;
+      margin: 0px 2px;
     }
   }
 }
@@ -113,8 +113,9 @@
 .myPageInfo {
   display: flex;
   justify-content: end;
-  .heartWrap,
-  .cartWrap {
+  .fillHeart,
+  .OutlineHeart,
+  .addcart {
     cursor: pointer;
     width: 35px;
     height: 35px;
