--- a/src/components/MovieModal/style.scss
+++ b/src/components/MovieModal/style.scss
@@ -1,3 +1,129 @@
-.movieModalContainer {
-  color: wheat;
+.moviePreviewContainer {
+  background-color: rgba(0, 0, 0, 0.7);
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  .previewContent {
+    background-color: rgb(20, 20, 20);
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 50%;
+    height: 50%;
+    display: flex;
+    border-radius: 20px;
+    justify-content: space-between;
+  }
+}
+
+.previewRight {
+  flex-direction: column;
+  display: flex;
+}
+
+.closeBtn {
+  display: flex;
+  justify-content: end;
+  margin: 30px 0px;
+  svg {
+    cursor: pointer;
+  }
+}
+
+.previewLeft {
+  // background-color: red;
+  img {
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    height: 100%;
+  }
+}
+
+.previewRight {
+  padding: 0px 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+}
+
+.previewInfo {
+  padding: 10px;
+}
+
+.overview {
+  color: #e5e5e5;
+  font-size: 14px;
+  margin: 40px 0px;
+}
+
+.metaData {
+  display: flex;
+  align-items: center;
+  span {
+    background-color: #b66d3b;
+    border-radius: 3px;
+    padding: 5px;
+    color: #e5e5e5;
+    margin-right: 20px;
+    font-weight: 700;
+  }
+  div {
+    svg {
+      margin: 0px 2px;
+    }
+  }
+}
+
+.language {
+  color: #454545;
+  font-weight: 600;
+  & > span {
+    color: #e5e5e5;
+    font-size: 12px;
+    font-weight: 700;
+    border-radius: 5px;
+    text-transform: uppercase;
+    margin: 5px 5px;
+    padding: 3px 5px;
+    background-color: #666666;
+  }
+}
+
+.genres {
+  color: #454545;
+  font-weight: 600;
+  & > span {
+    color: #e5e5e5;
+    font-size: 12px;
+    font-weight: 700;
+    border-radius: 5px;
+    text-transform: uppercase;
+    margin: 5px 5px;
+    padding: 3px 5px;
+    background-color: #ac8b29;
+  }
+}
+
+.myPageInfo {
+  display: flex;
+  justify-content: end;
+  .fillHeart,
+  .OutlineHeart,
+  .addcart {
+    cursor: pointer;
+    width: 35px;
+    height: 35px;
+    margin-top: 10px;
+    margin-right: 20px;
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
 }
