--- a/src/components/MovieModal/style.scss
+++ b/src/components/MovieModal/style.scss
@@ -6,6 +6,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+
   .previewContent {
     background-color: rgb(20, 20, 20);
     position: fixed;
@@ -14,11 +15,26 @@
     left: 0;
     right: 0;
     margin: auto;
+    opacity: 0;
     width: 50%;
     height: 50%;
     display: flex;
     border-radius: 20px;
     justify-content: space-between;
+    animation-name: size-grow;
+    animation-duration: 0.7s;
+    animation-timing-function: timing-function;
+    animation-fill-mode: forwards;
+    @keyframes size-grow {
+      0% {
+        width: 40%;
+        height: 40%;
+        top: 200px;
+      }
+      100% {
+        opacity: 1;
+      }
+    }
   }
 }
 
