--- a/src/components/MovieModal/style.scss
+++ b/src/components/MovieModal/style.scss
@@ -46,7 +46,7 @@
 .closeBtn {
   display: flex;
   justify-content: end;
-  margin: 30px 0px;
+  margin: 30px 0px 0px 0px;
   svg {
     cursor: pointer;
   }
@@ -68,6 +68,16 @@
   justify-content: start;
 }
 
+.previeTitle {
+  color: #e5e5e5;
+  padding: 10px;
+  cursor: pointer;
+  h1 {
+    font-size: 30px;
+    font-weight: 700;
+  }
+}
+
 .previewInfo {
   padding: 10px;
 }
@@ -75,7 +85,12 @@
 .overview {
   color: #e5e5e5;
   font-size: 14px;
-  margin: 40px 0px;
+  margin: 30px 0px 10px 0px;
+  p {
+    width: 404px;
+    height: 100px;
+    overflow-y: auto;
+  }
 }
 
 .metaData {
