--- a/src/components/MovieModal/style.scss
+++ b/src/components/MovieModal/style.scss
@@ -91,7 +91,7 @@
   font-size: 14px;
   margin: 30px 0px 10px 0px;
   p {
-    width: 404px;
+    width: 100%;
     height: 100px;
     overflow-y: auto;
   }
