--- a/src/components/MovieModal/style.scss
+++ b/src/components/MovieModal/style.scss
@@ -76,6 +76,11 @@
   color: #e5e5e5;
   padding: 10px;
   cursor: pointer;
+  a {
+    text-decoration: none;
+    color: #e5e5e5;
+    font-size: 30px;
+  }
   h1 {
     font-size: 30px;
     font-weight: 700;
