--- a/src/page/MovieDetail/style.scss
+++ b/src/page/MovieDetail/style.scss
@@ -51,9 +51,15 @@
     display: flex;
     align-items: center;
     margin-top: 20px;
-    h3 {
+    span {
+      background-color: #b66d3b;
+      border-radius: 3px;
+      padding: 5px;
       margin: 0px;
+
+      color: #e5e5e5;
       margin-right: 20px;
+      font-weight: 700;
     }
     & ul {
       display: flex;
