--- a/src/page/PickList/style.scss
+++ b/src/page/PickList/style.scss
@@ -8,12 +8,23 @@
   li {
     display: flex;
     justify-content: center;
+    flex-direction: column;
     list-style: none;
     cursor: pointer;
-    width: 250px;
-    height: 350px;
-    margin: 20px 0px;
+    width: 200px;
+    height: 280px;
+    margin: 20px 20px;
     cursor: pointer;
+    text-align: center;
+
+    .pickListInfo {
+      margin-top: 20px;
+    }
+
+    h3 {
+      color: #e5e5e5;
+      margin: 0;
+    }
 
     & img {
       width: 100%;
