--- a/src/components/MovieReviews/style.scss
+++ b/src/components/MovieReviews/style.scss
@@ -1,29 +1,123 @@
 .reviews {
   display: flex;
+  width: 100%;
+  height: 600px;
   padding: 80px;
+  color: #e5e5e5;
   .addReviews {
-    background-color: blue;
+    background-color: rgb(20, 20, 20);
+    border: 1px solid #727272;
+
+    border-radius: 10px;
+    margin-right: 5px;
     width: 50%;
     .moviePoint {
       text-align: center;
+      & svg {
+        cursor: pointer;
+        margin: 3px;
+      }
     }
     .addReviewBox {
       display: flex;
       flex-direction: column;
       align-items: center;
       textarea {
-        width: 70%;
-        height: 90px;
+        width: 90%;
+        height: 300px;
         resize: none;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+          'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+        outline: none;
+        padding: 5px;
       }
       button {
-        width: 70%;
+        color: #e5e5e5;
+        font-weight: 700;
+        cursor: pointer;
+        font-size: 18px;
+        margin-top: 10px;
+        width: 90%;
         height: 30px;
+        background-color: #c40a1b;
+        border: 0;
       }
     }
   }
-  .reviewsList {
-    width: 50%;
-    background-color: red;
+}
+.reviewsList {
+  width: 50%;
+  background-color: rgb(20, 20, 20);
+  border: 1px solid #727272;
+  margin-left: 5px;
+  border-radius: 10px;
+  padding: 10px;
+  li {
+    display: flex;
+    list-style: none;
+    border-bottom: 1px solid #727272;
+    padding-bottom: 4px;
+    margin: 5px 0px;
+    cursor: pointer;
+    .reviewsListNumber {
+      width: 8%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 20px;
+      font-weight: 700;
+    }
+    .reiviewsListContent {
+      display: flex;
+      width: 92%;
+      flex-direction: column;
+      & p {
+        margin: 0;
+        width: 95%;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+      .reviewText {
+        margin-bottom: 4px;
+      }
+    }
   }
+
+  .movieListPoint {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    margin-bottom: 4px;
+    .grade {
+      display: flex;
+      & svg {
+        margin: 0px 3px;
+      }
+    }
+    .reviewScore {
+      font-size: 14px;
+    }
+  }
+}
+
+.listCount {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  & li,
+  svg {
+    cursor: pointer;
+    margin: 0px 20px;
+    border: 0;
+  }
+}
+
+.reviewNickname {
+  margin-right: 20px;
+  font-size: 14px;
+}
+.reviewDate {
+  font-size: 14px;
 }
