--- a/src/page/PickList/style.scss
+++ b/src/page/PickList/style.scss
@@ -2,28 +2,29 @@
   width: 1200px;
   padding-top: 80px;
   margin: auto;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(auto, 1fr);
+  grid-column-gap: 30px;
+  grid-row-gap: 30px;
   li {
     display: flex;
-    justify-content: center;
     flex-direction: column;
+    align-items: center;
     list-style: none;
     cursor: pointer;
-    width: 200px;
-    height: 280px;
-    margin: 20px 20px;
-    cursor: pointer;
+    width: 100%;
+    height: 100%;
     text-align: center;
-
     .pickListInfo {
-      margin-top: 20px;
+      margin-top: 10px;
     }
 
     h3 {
       color: #e5e5e5;
       margin: 0;
+      white-space: nowrap;
+      font-size: 0.8rem;
     }
 
     & img {
