--- a/src/components/LogOutModal/style.scss
+++ b/src/components/LogOutModal/style.scss
@@ -4,7 +4,7 @@
   position: absolute;
   padding: 30px 0px;
   right: 60px;
-  top: 40px;
+  top: 30px;
   color: #e5e5e5;
   border-radius: 10px;
   display: flex;
@@ -32,13 +32,17 @@
       height: 100px;
       padding: 0px;
 
+      a {
+        width: 100%;
+        text-decoration: none;
+      }
+
       & li:hover {
         background-color: #666666;
       }
 
       li {
-        // background-color: #c40a1b;
-        width: 250px;
+        width: 100%;
         margin: 8px 0px;
         height: 30px;
         display: flex;
@@ -51,6 +55,8 @@
         }
         p {
           color: #e5e5e5;
+          width: 70px;
+          text-align: center;
           font-size: 14px;
           font-weight: 700;
         }
@@ -60,7 +66,7 @@
     & button {
       box-sizing: border-box;
       background-color: #c40a1b;
-      width: 250px;
+      width: 100%;
       height: 30px;
       font-size: 20px;
       font-weight: 600;
