--- a/src/components/MovieModal/style.scss
+++ b/src/components/MovieModal/style.scss
@@ -16,8 +16,8 @@
     right: 0;
     margin: auto;
     opacity: 0;
-    width: 50%;
-    height: 50%;
+    width: 800px;
+    height: 490px;
     display: flex;
     border-radius: 20px;
     justify-content: space-between;
@@ -38,11 +38,6 @@
   }
 }
 
-.previewRight {
-  flex-direction: column;
-  display: flex;
-}
-
 .closeBtn {
   display: flex;
   justify-content: end;
@@ -53,8 +48,7 @@
 }
 
 .previewLeft {
-  // background-color: red;
-  width: 40%;
+  width: 300px;
   img {
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
@@ -66,7 +60,7 @@
 
 .previewRight {
   padding: 0px 20px;
-  width: 60%;
+  width: 500px;
   display: flex;
   flex-direction: column;
   justify-content: start;
@@ -94,10 +88,10 @@
 .overview {
   color: #e5e5e5;
   font-size: 14px;
-  margin: 30px 0px 10px 0px;
+  margin: 30px 0px 20px 0px;
   p {
     width: 100%;
-    height: 4rem;
+    height: 120px;
     overflow-y: auto;
   }
 }
@@ -150,6 +144,12 @@
   }
 }
 
+.metaDataDetail {
+  p {
+    margin: 10px 0px;
+  }
+}
+
 .myPageInfo {
   display: flex;
   justify-content: end;
@@ -165,11 +165,5 @@
       width: 100%;
       height: 100%;
     }
-  }
-}
-
-@media screen and (max-height: 800px) {
-  .metaDataDetail {
-    display: none;
   }
 }
