--- a/src/components/ui/MovieModal/style.scss
+++ b/src/components/ui/MovieModal/style.scss
@@ -155,25 +155,19 @@
 .myPageInfo {
   display: flex;
   justify-content: end;
-  .fillHeart,
-  .OutlineHeart,
-  .addcart {
+  button {
+    background-color: red;
+    background-color: #00000000;
+    border: 0;
     cursor: pointer;
+  }
+  button svg {
     width: 35px;
     height: 35px;
-    margin-top: 10px;
-    margin-right: 20px;
-    img {
-      width: 100%;
-      height: 100%;
-    }
+    margin: 10px 10px;
   }
-}
-
-.OutlineHeart {
-  color: #e5e5e5;
-}
-
-.fillHeart {
-  color: #f91f1f;
+  img {
+    width: 100%;
+    height: 100%;
+  }
 }
