--- a/src/components/ModalCartAlert/style.scss
+++ b/src/components/ModalCartAlert/style.scss
@@ -13,7 +13,7 @@
   animation-duration: 0.7s;
   animation-timing-function: timing-function;
   animation-fill-mode: forwards;
-  p {
+  div {
     width: 100%;
     color: #e5e5e5;
     display: flex;
