--- a/src/page/Cart/style.scss
+++ b/src/page/Cart/style.scss
@@ -4,63 +4,10 @@
   align-items: center;
   justify-content: center;
 }
-.boxControl {
-  width: 1200px;
-  padding-top: 100px;
-  color: #e5e5e5;
-  display: flex;
-  justify-content: start;
-  align-items: center;
-  .box-all-select {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100px;
-    height: 30px;
-    background-color: #66666666;
-    border: 1px solid #666666;
-    margin-right: 20px;
-
-    input[type='checkbox'] {
-      width: 15px;
-      height: 15px;
-      cursor: pointer;
-      margin-right: 10px;
-    }
-    p {
-      color: #e5e5e5;
-      font-size: 16px;
-      font-weight: 600;
-      margin: 0;
-    }
-  }
-  button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #66666666;
-    border: 1px solid #666666;
-    width: 100px;
-    height: 30px;
-    cursor: pointer;
-    svg {
-      width: 20px;
-      height: 20px;
-      color: #b63b3b;
-      margin-right: 5px;
-    }
-    p {
-      color: #e5e5e5;
-      font-size: 16px;
-      font-weight: 600;
-      margin: 0;
-    }
-  }
-}
 
 .cart {
   width: 1200px;
-  padding-top: 20px;
+  padding-top: 120px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -245,6 +192,9 @@
   height: 100%;
   padding-top: 10px;
   margin-right: 70px;
+  div {
+    width: 90px;
+  }
   h2 {
     font-size: 20px;
     margin-bottom: 50px;
