--- a/src/components/ModalCartAlert/style.scss
+++ b/src/components/ModalCartAlert/style.scss
@@ -20,6 +20,7 @@
     align-items: center;
     justify-content: center;
     div {
+      width: 20px;
       margin-right: 6px;
       display: flex;
       align-items: center;
