--- a/src/page/Cart/style.scss
+++ b/src/page/Cart/style.scss
@@ -164,6 +164,7 @@
   }
   p {
     margin: 0;
+    width: 52px;
     font-size: 20px;
     font-weight: 700;
   }
@@ -171,6 +172,7 @@
     display: flex;
     align-items: center;
     margin-bottom: 30px;
+    text-align: center;
     svg {
       margin: 0px 10px;
       width: 22px;
@@ -180,6 +182,7 @@
   }
   .retalDate {
     p {
+      width: 130px;
       margin: 5px 0px;
       font-size: 14px;
     }
