--- a/src/page/MovieDetail/style.scss
+++ b/src/page/MovieDetail/style.scss
@@ -90,6 +90,27 @@
   }
 }
 
+.detailclickInfo {
+  margin-top: 60px;
+  display: flex;
+  justify-content: end;
+  button {
+    width: 45px;
+    height: 45px;
+    margin: 0px 10px;
+    padding: 0;
+    cursor: pointer;
+    border: 0;
+    display: flex;
+    background-color: rgba(255, 255, 255, 0);
+    outline: none;
+    svg {
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
+
 .detailMediaContainer {
   display: flex;
   flex-direction: column;
