movie detail ui update

--- a/src/page/MovieDetail/style.scss
+++ b/src/page/MovieDetail/style.scss
@@ -50,6 +50,10 @@
     & h1 {
       color: #e5e5e5;
     }
+    .modalCartAlert {
+      left: 930px;
+      top: 390px;
+    }
   }
   & .detail__subInfo {
     display: flex;
