pick page ui update

--- a/src/page/PickList/style.scss
+++ b/src/page/PickList/style.scss
@@ -18,6 +18,9 @@
     text-align: center;
     .pickListInfo {
       margin-top: 10px;
+      svg {
+        width: 16px;
+      }
     }
 
     h3 {
