react router path change

--- a/src/components/SearchItems/style.scss
+++ b/src/components/SearchItems/style.scss
@@ -1,6 +1,7 @@
 .searchItems {
   width: 1200px;
   padding: 80px 80px 0px 80px;
+  background-color: red;
   margin: auto;
   display: grid;
   grid-template-columns: repeat(6, 1fr);
