search ui update

--- a/src/components/SearchItems/style.scss
+++ b/src/components/SearchItems/style.scss
@@ -4,8 +4,9 @@
   height: 550px;
   width: 100%;
   overflow-y: auto;
-  // background-color: blue;
-  background-color: #101010;
+  border-bottom: 0.1px solid #e5e5e5;
+  background-color: #080808;
+  padding-bottom: 20px;
 }
 
 .searchItems {
