update cart total data

--- a/src/page/Cart/style.scss
+++ b/src/page/Cart/style.scss
@@ -282,10 +282,22 @@
       font-size: 24px;
     }
     span {
-      margin-left: 10px;
+      color: #e5e5e5;
+      margin-left: 5px;
+      font-size: 24px;
+    }
+    .cartDigit {
+      color: #3ce21e;
+      // margin-left: 5px;
       font-size: 24px;
     }
   }
+  .cartDigitText {
+    color: #e5e5e5;
+    margin-left: 5px;
+    font-size: 24px;
+  }
+  // mar
 
   .selectAllMovieWrap p {
     // color: #b63b3b;
