--- a/src/page/Cart/style.scss
+++ b/src/page/Cart/style.scss
@@ -98,7 +98,7 @@
   .cartInfo__metaData {
     display: flex;
     justify-content: start;
-    .moviedDte {
+    .moviedDate {
       background-color: #b66d3b;
       font-size: 14px;
       border-radius: 3px;
