--- a/src/components/ui/MenuBar/style.scss
+++ b/src/components/ui/MenuBar/style.scss
@@ -80,7 +80,9 @@
   & p {
     color: #e5e5e5;
     font-family: sans-serif;
-    margin: 0px 10px;
+    margin: 0px 5px;
+    width: 42px;
+    text-align: center;
   }
 }
 
